// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-media-by-id-referenced-descendants should get references to descendant media items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
      },
    ],
    "nextCursor": undefined,
    "total": 1,
  },
}
`;

exports[`get-media-by-id-referenced-descendants should handle media with no descendants 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "nextCursor": undefined,
    "total": 0,
  },
}
`;

exports[`get-media-by-id-referenced-descendants should return empty when media folder has no referenced descendants 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "nextCursor": undefined,
    "total": 0,
  },
}
`;
